<resources>
    <string name="app_name">Bill Please</string>
    <string name="Bill">Bill Please</string>
    <string name="Amount">Amount</string>
    <string name="numberofpax">Enter Number of People</string>
    <string name="payableamount">Enter an amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="discountgiven">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="gst">GST</string>
    <string name="no_svs">NO SVS</string>
    <string name="split">Split</string>
</resources>